Checkpoint: Complete Socall C Group LLC web app with all features implemented:
✅ Ocean Trust design system with professional branding
✅ Hero section with Kristine's credentials and dual CTAs
✅ Four-tier transparent pricing (Startups, Emerging Growth, Scale, Enterprise)
✅ Stripe payment integration with checkout and subscription management
✅ Nonprofit web app carousel (10 examples with auto-advance)
✅ AI-powered mockup generator (LLM + image generation)
✅ AI workflow automation section (chatbot + blog generator)
✅ Add-on services and testimonials with specific results
✅ User dashboard with subscription management and mockup gallery
✅ Calendly integration for consultation scheduling
✅ Contact section and comprehensive footer
✅ User authentication with Manus OAuth
✅ Google Analytics tracking (G-5YGX5MBNX1)
✅ Comprehensive vitest tests (17 tests passing)
✅ Mobile-responsive design throughout

Strategic positioning: Finance + Creative intersection, transparent pricing, relief-focused UX for overwhelmed visitors.

Ready for deployment. Stripe test sandbox needs to be claimed before Feb 15, 2026.

--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,23 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Socall C Group LLC</title>    
-    <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
+    <link rel="icon" type="image/jpeg" href="/SocallCGroup_Icon.jpeg" />
+    <title>Socall C Group LLC | Expert Financial Consulting & Web Development</title>
+    <meta name="description" content="Bringing 25+ years big-firm expertise to independent businesses and nonprofits. Transparent pricing, custom web apps, and AI-powered workflow automation." />
+    
+    <!-- Google Fonts: Inter (body) + Poppins (headings) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    THIS IS THE END OF A COMMENT BLOCK, BLOCK TO BE DELETED -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@500;600;700;800&display=swap" rel="stylesheet" />
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5YGX5MBNX1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-5YGX5MBNX1');
+    </script>
   </head>
 
   <body>
